# rtrcrs

./: Cargo.toml  README.md  image.ppm  out.ppm
examples/: example.rs
src/: aabb.rs  bvh.rs  camera.rs  color.rs  definitions.rs  hittable.rs  hittable_list.rs  lib.rs  main.rs  material.rs  moving.rs  ray.rs  sphere.rs  vector.rs
tests/: main.rs
