[package]
name = "rtrcrs"
version = "0.1.0"
authors = [
  "Devdutt Shenoi <devdutt@outlook.in>",
  "M Bharath Krishna Pai <m.bharathkrishna07@gmail.com>"
]
license = "MIT"
description = "An experimental ray-tracing library being written in rust, inspired by Ray Tracing in One Weekend"
edition = "2018"

[dependencies]
nalgebra = "0.26"
rand = "0.8.0"
rayon = "1.5"
